--- a/config.env
+++ b/config.env
@@ -1,17 +1,17 @@
 
 # REQUIRED CONFIG
-BOT_TOKEN = "1852136534:AAFg1RIQDrzqUI_piSSrB3u1pYp2cix-7Gk"
+BOT_TOKEN = "5290905127:AAFvRHxpV1UiW2dCBh-GK9-1aO8ZcziSnuk"
 GDRIVE_FOLDER_ID = "1XNRFXtHIoGmYQm9O0PsoLifJSmUW6TNH"
-OWNER_ID = 548699498
+OWNER_ID = 995086208
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = "True"
-TELEGRAM_API = 6134343
-TELEGRAM_HASH = "344493a60221b6483e47b00ff1461708"
+TELEGRAM_API = 7041911
+TELEGRAM_HASH = "abab2561c71e3004a55d4ff9763d5383"
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://owghrngi:rb4LnaMIh7JiBEDq4JUQ5fqsgztwLeg4@tiny.db.elephantsql.com/owghrngi"
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "-1001529391938"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "True"
